fixed css for small screen overlaping tidied up unclickable interfacing blocking canvas clicks

--- a/src/style.css
+++ b/src/style.css
@@ -102,16 +102,20 @@ body,
  {
      position: absolute;
      bottom: 10%;
-     left: 10%;
-     width: 100%;
-     pointer-events:all
+     left: 5%;         /* Center the element horizontally */
+     /* transform: translateX(-50%); */
+      /* Move it back by half of its own width to center it */
+     width: 20%;
+     pointer-events:none
+
    
  }
  
  .otherControls .raw
  {
      display: flex;
-     justify-content: left;
+     width:100%;
+     justify-content: center;
      pointer-events:all
     
 
@@ -120,9 +124,9 @@ body,
  .otherControls .key
  {
 
-     width: 120px;
-     height: 40px;
-     margin: 4px;
+     width: 100%;
+     height: 100%;
+     margin: 1%;
      border: 2px solid #ffffff;
      background: #ffffff44;
      pointer-events:all;
@@ -132,8 +136,19 @@ body,
 
  .otherControls .key .text{
     color: #ffffff;
-    font-size: 35px;
+    font-size: 2.0em; 
     background: #00000033;
     text-align: center;
 
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
+
+/* Adjust text size for screens with a maximum width of 768px */
+@media screen and (max-width: 768px) {
+    .otherControls .key .text {
+        font-size: 1.5em; /* Adjust the font size for smaller screens */
+    }
 }
